@@ -2,6 +2,11 @@
 
 	* md5.h (md5_uint32): Choose via INT_MAX instead of UINT_MAX.
 
+2000-09-04  Alex Samuel  <samuel@codesourcery.com>
+
+	* dyn-string.h: Adjust formatting. 
+	(dyn_string_insert_char): New macro.  New declaration.
+
 2000-08-28  Jason Merrill  <jason@redhat.com>
 
 	* md5.h: New file.
